examples/test/testpolicy8959.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8959
  namespace: namespace3
spec:
  podSelector:
    matchLabels:
      key41: value14
      key32: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key3: value23
          key24: value33
          key25: value49
      podSelector:
        matchLabels:
          key4: value12
          key3: value47
          key20: value7
